GL/Projet_GL/src/test/deca/syntax/invalid/sansObjet/arguments_invalid_pr_print.deca
// Test : syntax_invalid_trailing_comma_in_print
// But : détecter une virgule finale invalide dans un appel de fonction.
// Type d'erreur : erreur syntaxique
// Résultat attendu : erreur de syntaxe.

{
    print(3,);
}